fixed button alignment

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -6,7 +6,7 @@ $light-pink: #c4c4c4;
 $pink: #7a7a7a;
 $dark-pink: #7c7c7c;
 $pink-border: #4e4e4e;
-$pink-shadow: #dbdbdb;
+$pink-shadow: #ff000000;
 
 * {
   box-sizing: border-box;
@@ -55,8 +55,17 @@ body {
 #quizquestions {
   margin: 25px;
   display: flex;
+  align-items: center;
   justify-content: center;
+  flex-direction: column;
   margin-top: 4em;
+}
+
+#innerquiz {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 #welcome-message {
@@ -65,6 +74,9 @@ body {
   margin-top: 4em;
 }
 
+#toomanyids{
+  padding:30px;
+}
 
 button {
   position: relative;
